2004-05-31  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, default/blog.conf, docs/nanoblogger.html:
	Updated "Requirements" and "Settings and Configuration" Sections of manual.

	* nb, plugins/atom.sh, plugins/rss.sh:
	- (query_db): Added new query_type, limit.
	- Updated Atom and RSS plugins to use new query_type, limit.

	* ChangeLog, default/blog.conf, nb, plugins/atom.sh, plugins/list_entries.sh, plugins/rss.sh:
	- Renamed MAX_DISPLAY to MAX_ENTRIES.
	- Renamed PERMALINKS to PERMALINKS_DIR.
	- Renamed FULL_PERMALINKS to PERMALINKS.
	- Renamed CAT_FEEDS to CATEGORY_FEEDS.

2004-05-30  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, nb:
	- Combined code from delete_blog into new function, find_categories.
	- (delete_blog): Fixed data loss (replaced bad cat/sed command).
	- (delete_blog): Now requires the mv command.
	- (move_entry): Categories now get updated properly.
	- (move_entry): Now tests if a category needs to be modified.
	- (move_entry): Fixed data loss (removed unecessary sed command).

2004-05-29  n1xt3r  <n1xt3r@bluefalcon>

	* default/templates/atom.xml: Removed xml:lang="en" from <feed> tag.

	* default/templates/atom.xml, default/templates/rdf.xml, default/templates/rdf_catfeed.xml:
	Updated RSS and Atom templates, set encoding back to BLOG_CHARSET.

	* ChangeLog, nb: Minor code cleanup.

	* ChangeLog, nb (move_entry): Removed unecessary code.

	* ChangeLog, nb (move_entry):
	Reversed for loops: for category in category list for entry in entry list done done.

2004-05-28  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, plugins/rss.sh:
	Filtered escaped characters in NB_ArchiveTitle.

	* ChangeLog, docs/nanoblogger.html:
	Updated "Settings and Configuration".

2004-05-27  n1xt3r  <n1xt3r@bluefalcon>

	* default/templates/makepage.htm: Added a meta-tag for the generator.

	* ChangeLog, plugins/articles.off:
	- Simplified format of an article source file.
	- Added useful information in the comments of the plugin's code.

2004-05-26  n1xt3r  <n1xt3r@bluefalcon>
