@@ -1,7 +1,9 @@
 # NanoBlogger Blog Config File - blog.conf
 
+##### Publishing Preferences #####
+
 # Override EDITOR used for this blog.
-#EDITOR="pico"
+#EDITOR="nano"
 
 # Set maximum number of entries to display on the main page.
 MAX_ENTRIES="10"
@@ -19,7 +21,7 @@ BLOG_URL=""
 # Set the Blog's Stylesheet.
 BLOG_CSS="$BLOG_URL/styles/nb_rusted.css"
 
-# Set a custom action to preform on links (e.g. run a server-side script on an article)
+# Set a custom action to perform on links (e.g. run a server-side script on an article)
 # used by some plugins, but can also be used in templates.
 BLOG_URL_ACTION=""
 # example using a cgi script for article comments
@@ -51,13 +53,15 @@ BLOG_CONTACT=""
 # example email as link
 # BLOG_CONTACT='<a href="mailto:foo@null.org">email foo</a>'
 
+##### Archive Preferences #####
+
 # Build individual archive for each entry - 0/1 = off/on.
-PERMALINKS="0"
+ENTRY_ARCHIVES="0"
+
+##### Plugin Preferences #####
 
 # Enable plugins - 0/1 = off/on.
 ENABLE_PLUGINS="1"
-
-##### Plugin Specific Variables #####
 
 # Enable auto-formatting of entries, e.g. line breaks translate to HTML - 0/1 = off/on.
 AUTO_FORMAT="1"
